# xdelta

./: .gitignore  README.md  build.ps1  build.sh  verify-registry.ps1
.github/config/: build-config.yml
.github/scripts/: build-common.sh  build-linux.sh  build-windows.ps1  make-scripts-executable.sh  prepare-artifacts.sh  prepare-vcpkg-package.ps1  unified-packaging.sh  update-vcpkg-registry.sh  verify-vcpkg-registry.sh
.github/workflows/: pr-build-test.yml  release.yml  reusable-build-v2.yml  reusable-build.yml  vcpkg-registry-update.yml
docs/: BUILD.md  ci-cache-update-summary.md  workflow-refactoring-summary.md
ports/xdelta/: portfile.cmake
scripts/: update-vcpkg-registry.ps1
test-cmake-config/: CMakeLists.txt  README.md  test_xdelta.cpp
vcpkg-registry/: vcpkg-configuration.json
vcpkg-registry/ports/xdelta/: portfile.cmake  vcpkg.json  xdeltaConfig.cmake.in
vcpkg-registry/versions/x-/: xdelta.json
versions/x-/: xdelta.json
